--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.4"
 services:
   app:
     container_name: server
@@ -10,6 +10,8 @@ services:
       - "3000:3000"
       - "8080:8080"
     links:
+      - mongo
+    depends_on:
       - mongo
   mongo:
     container_name: mongo
