--- a/package.json
+++ b/package.json
@@ -1,36 +1,17 @@
 {
-  "name": "movie-server",
-  "version": "1.0.0",
-  "main": "server/server.js",
-  "engines": {
-    "node": ">=4"
-  },
+  "name": "node-test",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "lint": "eslint .",
-    "start": "node . & cd client/sandberg-movie && npm run start",
-    "posttest": "npm run lint && nsp check"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "compression": "^1.0.3",
-    "cors": "^2.5.2",
-    "helmet": "^1.3.0",
-    "loopback": "^3.18.2",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^4.0.0",
-    "loopback-connector-mongodb": "^1.18.1",
-    "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^2.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^3.17.1",
-    "eslint-config-loopback": "^8.0.0",
-    "nodemon": "^1.14.12",
-    "nsp": "^2.1.0"
-  },
-  "repository": {
-    "type": "",
-    "url": ""
-  },
-  "license": "UNLICENSED",
-  "description": "movie-server"
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "mongoose": "^5.0.4",
+    "morgan": "~1.9.0",
+    "serve-favicon": "~2.4.5"
+  }
 }
