--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.4",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
