--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "lodash": "^4.17.5",
     "mongoose": "^5.0.4",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5",
+    "serve-favicon": "~2.4.5"
   }
 }
