--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,16 @@ services:
     ports:
       - "3000:3000"
     links:
-      - mongo
+      - mysql
     depends_on:
-      - mongo
-  mongo:
-    container_name: mongo
-    image: mongo
+      - mysql
+  mysql:
+    container_name: mysql-movie
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: password
     volumes:
       - ./data:/data/db
     ports:
-      - "27017:27017"
+      - "3306:3306"
