--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jsonwebtoken": "^8.1.1",
+    "knex": "^0.14.4",
     "lodash": "^4.17.5",
-    "mongoose": "^5.0.4",
     "morgan": "~1.9.0",
+    "mysql": "^2.15.0",
     "serve-favicon": "~2.4.5"
   }
 }
