--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "helmet": "^3.12.0",
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.4",
     "lodash": "^4.17.5",
