--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
+    "email-validator": "^2.0.3",
     "express": "~4.15.5",
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.4",
